<resources>
    <string name="app_name" translatable="false">PegaEu</string>
    <string name="enemy">Enemy</string>
    <string name="whatShouldI">What Should I Pick ?</string>
    <string name="crudToolbar">Heroes</string>
    <string name="listToolbar">List Heroes</string>
    <string name="aboutToolbar">About</string>
    <string name="pegaEu" translatable="false">PegaEU</string>
    <string name="aboutAppDescrip">PegaEU is a app for helping you to make the best dota pick</string>
    <string name="aboutDevelopment">Developed by: Freator.py</string>
    <string name="email" translatable="false">lucas.freitascosta96@gmail.com</string>
    <string name="AddCrudButton">Add Hero</string>
    <string name="Hero">Hero</string>
    <string name="EditActivityBad">Poor versus:</string>
    <string name="Save">Save</string>
    <string name="Delete">Delete</string>
</resources>
